--- a/src/App/About Company/AboutCompany.css
+++ b/src/App/About Company/AboutCompany.css
@@ -15,7 +15,10 @@
 	0 3px 0 #2a2a2a, 
 	0 4px 0 #282828, 
 	0 5px rgba(0, 0, 0, 0.9); */
-.about-company h2,h3{
+.about-company h2{
 	margin-left: 15px;
+}
+.services {
+	min-width:520px;
 }
 
