--- a/src/App/About Company/AboutCompany.css
+++ b/src/App/About Company/AboutCompany.css
@@ -2,9 +2,7 @@
 	width: 100%;
 	display:flex;
 	justify-content: space-between;
-	padding-top: 100px;
 	font-variant: small-caps;	
-	font-size: 18px;
 	font-weight: 700;
 	color:#727b82;
 }
@@ -15,10 +13,15 @@
 	0 3px 0 #2a2a2a, 
 	0 4px 0 #282828, 
 	0 5px rgba(0, 0, 0, 0.9); */
-.about-company h2{
-	margin-left: 15px;
+@media screen and (min-width: 1270px) {
+	.about-company {
+		padding-top: 100px;
+		font-size: 18px;
+	}
+	.services {
+		min-width:520px;
+	}
+	.about-company h2{
+		margin-left: 15px;
+	}
 }
-.services {
-	min-width:520px;
-}
-
