--- a/src/App/Header/Logo/logo.css
+++ b/src/App/Header/Logo/logo.css
@@ -1,10 +1,23 @@
 .logo {
 	display: flex;
 	justify-content: center;
+	width: 100%;
 }
 .logo a{
+	width: 100%;
 	outline: none;
 	border: 1px solid;
 	border-color: white;
-	border-radius: 10px;
+	border-radius: 16px;
+}
+@media screen and (min-width: 1270px) {
+	.logo a{
+		background-image: url(../../../pictures/logo.png) ;
+		background-repeat: no-repeat;
+		background-position: center;
+		min-height: 98px;
+	}
+	.logo {
+		min-height: 98px;
+	}
 }
