--- a/src/App/Header/Navigation/navigation.css
+++ b/src/App/Header/Navigation/navigation.css
@@ -6,31 +6,21 @@
 }
 .menu-buttons{
 	display: flex;	
-	height: 45px;
-	width: 200px;
-	align-items:center;
 	justify-content: center;
-	border-radius: 30px;
-	border: 1px solid;
-	border-color: #8cbf41;
-	position: static;
+	align-items:center;
 }
 .menu-buttons a{
-	font-size: 18px;
-	font-weight: 700;
 	outline: none;
 	color: #8cbf41;
 	text-decoration:none;
 	width: 100%;
 	height: 100%;
 	display: inline-block;
-	border-radius: 30px;
 	border: 1px solid;
 	border-color: #8cbf41;
 	z-index: 1;
 	list-style: none;
 	background-color: #fff;
-	padding-top: 10px;
 	text-align: center;
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
@@ -42,9 +32,7 @@
 .drop-menu {
 	visibility: hidden;
 	z-index: 1;
-	position: absolute;
 	list-style: none;
-	top: 92px;
 	background-color: #fff0;
 }
 .drop-right{
@@ -62,4 +50,34 @@
 
 #calculation-button button:hover{
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+@media screen and (min-width: 1270px) {
+	.menu-container {	
+		height: 49px;
+		align-items:center;
+	}
+	.menu-buttons{	
+		height: 45px;
+		width: 200px;
+		border-radius: 30px;
+		border: 1px solid;
+		border-color: #8cbf41;
+		position: static;
+	}
+	.menu-buttons a{
+		font-size: 18px;
+		font-weight: 700;
+		border-radius: 30px;
+		display: flex;
+        align-items: center;
+        justify-content: center;
+	}
+	.menu-buttons img {
+		position: relative;
+		left: 5px;
+	}
+	.drop-menu {
+		position: absolute;
+		top: 92px;
+	}
 }
