--- a/src/App/Slide/slide.css
+++ b/src/App/Slide/slide.css
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1270px) {
 .slide {
 	width: 100%;
 	margin-bottom: 301px;
@@ -72,6 +73,6 @@
 .fadein div:nth-child(3) { animation-delay: 10s;  }
 .fadein .slideText2:nth-child(2) { animation-delay: 5s;  }
 .fadein .slideText3{ animation-delay: 10s;  }
-
+}
 
 
