--- a/src/App/Transport/transport.css
+++ b/src/App/Transport/transport.css
@@ -14,9 +14,13 @@
 	font-weight: 700;
 	margin-bottom: 3px;
 }
-.transport-box{
-	width: 300px;
+
+@media screen and (min-width: 1270px) {
+	.transport-box{
+		width: 300px;
+	}
 }
+
 .transport-box img:hover{
 	-webkit-transform: scale(1.3);
     -ms-transform: scale(1.3);
