--- a/src/style/ls.css
+++ b/src/style/ls.css
@@ -55,7 +55,7 @@ body {
 }
 
 .inline-wrapper{
-	width: 1170px !important;
+	width: 1170px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -121,11 +121,14 @@ body {
 /*GEOGRAFHY CONTAINER*/
 /*FINISH GEOGRAPHY*/
 /*START TRANSPORT*/
+
 .insert-img {
 	width: 100%;
-	min-height: 200px;
-	max-height:560px;
-	margin-bottom: 80px;
+	height:600px;
+	margin-bottom: 0px;
+	background-image: url(../pictures/slide3.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
 }
 .insert-img h3{
 	color: white;
@@ -153,15 +156,6 @@ body {
       0 14px 0 #141414, 
       0 15px 0 #121212, 
       0 22px 30px rgba(0, 0, 0, 0.9);
-}
-.insert-img-container{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	max-height:600px;
-}
-.second-insert-img{
-	z-index: -1;
 }
 /*START SERVICES*/
 .four h2{
