--- a/src/style/IPud.css
+++ b/src/style/IPud.css
@@ -207,7 +207,13 @@
         max-width:45% !important;
     }
 	.services {
-		width:45%!important;
+		max-width:45% !important;
+    }
+    .us{
+        min-height: 250px !important;
+    }
+	.service {
+        min-height: 250px !important;
 	}
 	.about-company h2{
 		margin-left: 15px;
